@@ -25,6 +25,7 @@ generally pointless
 * UserData now just using std::string for keys
 * reworked class Timer to better integrate with libevent
 * added real support for F type messages
+* command line parsing uses Boost.Program Options
 
 - 0.9 -
 * Pseudo is now in charge :)
